<resources>
    <string name="app_name">SM</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_drawer_view">DrawerView</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Profesionales y Servicios</string>
    <string name="nav_header_subtitle">Software Metropolitano</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_servicios">Servicios</string>
    <string name="menu_acercade">Acerca de</string>
    <string name="menu_contacto">Contacto</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="buscar">Buscar</string>
    <string name="direccion">Ingresar zona</string>
    <string name="elegir">Ingrese su zona o búsque por su ubicación</string>
    <string name="resultados">Resultados barberías en Buceo</string>
    <string name="resultado1">Barbería Manuela</string>
    <string name="resultado2">Barbería Juanse</string>
    <string name="servicio">Lavado de cabello,cortes en general,todas las edades</string>
    <string name="servicio2">Cortes en general</string>
    <string name="resultadosmenu">Resultados</string>
</resources>
