<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_servicios" />
        <item
            android:id="@+id/nav_mapa"
            android:icon="@drawable/ic_menu_send"
            android:title="Mapa" />

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_acercade" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_contacto" />
        <item
            android:id="@+id/nav_resultados"
            android:icon="@drawable/ic_menu_resultados"
            android:title="@string/resultadosmenu" />
    </group>

    <item android:title="V3.20">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
