<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible">

    <TextView
        android:id="@+id/text_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Spinner
            android:id="@+id/planets_spinner"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="347dp"
            android:layout_marginRight="39dp"
            android:layout_marginBottom="10dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0"
            tools:visibility="visible" />

        <Spinner
            android:id="@+id/departamento_spinner"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/planets_spinner"
            android:layout_centerInParent="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="347dp"
            android:layout_marginRight="39dp"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/button"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_gravity="bottom|center|center_horizontal"
            android:layout_marginBottom="10dp"


            android:fontFamily="sans-serif-black"
            android:foregroundGravity="center"
            android:gravity="bottom|center|start|center_horizontal"
            android:shadowColor="#4CAF50"
            android:text="@string/buscar"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#0A26B8"
            android:textIsSelectable="false"
            android:textSize="18sp"
            android:textStyle="normal|bold" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="169dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/editText2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="@string/direccion"
            android:inputType="textPersonName"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editText2"
            style="@style/Widget.MaterialComponents.AutoCompleteTextView.FilledBox.Dense"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/departamento_spinner"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/elegir"
            android:textSize="8sp" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            app:srcCompat="@android:drawable/ic_menu_mapmode" />

    </RelativeLayout>
</LinearLayout>


