<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="215dp"
        android:layout_height="39dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/servicio"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@+id/imageButton5"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="215dp"
        android:layout_height="32dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:layout_marginBottom="8dp"
        android:bufferType="normal"
        android:text='@string/resultado1'
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="215dp"
        android:layout_height="32dp"
        android:layout_marginEnd="121dp"
        android:layout_marginRight="121dp"
        android:layout_marginBottom="12dp"
        android:autoText="true"
        android:bufferType="normal"
        android:text='@string/resultado2'
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="371dp"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="#F5F7F8"
        android:text="@string/resultados"
        android:textColor="#009688"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="38dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="215dp"
        android:layout_height="37dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:layout_marginBottom="3dp"
        android:text="@string/servicio2"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@+id/imageButton7"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="57dp"
        android:layout_height="45dp"
        android:layout_marginEnd="222dp"
        android:layout_marginRight="222dp"
        android:layout_marginBottom="74dp"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="57dp"
        android:layout_height="45dp"
        android:layout_marginEnd="217dp"
        android:layout_marginRight="217dp"
        android:layout_marginBottom="193dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="57dp"
        android:layout_height="45dp"
        android:layout_marginTop="6dp"
        app:layout_constraintEnd_toStartOf="@+id/imageButton5"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:srcCompat="@android:drawable/ic_menu_call" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="57dp"
        android:layout_height="45dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="193dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton8"
        app:srcCompat="@android:drawable/ic_menu_call" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="44dp"
        android:layout_height="41dp"
        android:layout_marginTop="11dp"
        app:layout_constraintStart_toEndOf="@+id/imageButton12"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@android:drawable/star_big_on" />

    <ImageButton
        android:id="@+id/imageButton11"
        android:layout_width="44dp"
        android:layout_height="41dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/star_big_on"
        tools:layout_editor_absoluteY="456dp" />

    <ImageButton
        android:id="@+id/imageButton12"
        android:layout_width="44dp"
        android:layout_height="41dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/star_big_on"
        tools:layout_editor_absoluteY="250dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="128dp"
        android:layout_height="117dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="38dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton10"
        app:srcCompat="@drawable/usuario" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="109dp"
        android:layout_height="117dp"
        app:srcCompat="@drawable/perfil"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="519dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Chatear"
        tools:layout_editor_absoluteX="353dp"
        tools:layout_editor_absoluteY="625dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Chatear"
        tools:layout_editor_absoluteX="344dp"
        tools:layout_editor_absoluteY="431dp" />

</androidx.constraintlayout.widget.ConstraintLayout>